# ludo_stacked_backend

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/dependencies/: auth.py  redis.py  supabase.py
app/routers/: auth.py  profile.py  rooms.py  ws.py
app/schemas/: auth.py  game_engine.py  profile.py  room.py  ws.py
app/services/game/: __init__.py  state.py  (+2 more)
app/utils/: board_render.py
docs/: db_schema.md  frontend-integration-guide.md  redis.md  websockets.md
docs/migrations/: find_or_create_room.sql
docs/plans/: 2026-02-27-partial-stack-design.md  2026-02-27-partial-stack-impl-plan.md  2026-02-28-capture-choice-design.md  2026-02-28-capture-choice-implementation.md  2026-02-28-core-engine-test-suite-design.md  2026-02-28-roll-allocation-impl-plan.md  2026-02-28-roll-allocation-redesign.md
scripts/: board_render.py  emulate_game.py
specs/: join_room_feature.md  room_creation_feature.md
tests/: __init__.py  conftest.py  test_auto_play.py  test_board_geometry.py  test_capture_chains.py  test_capture_choice.py  test_captures.py  test_events.py  test_full_turn_flow.py  test_game_finished.py  test_game_state_redis.py  test_get_out_of_hell.py  test_heaven_extra_rolls.py  test_hell_exit_collisions.py  test_homestretch_heaven.py  test_movement.py  test_multi_roll_allocation.py  test_rolling.py  test_stack_utils.py  test_stacking.py  test_start_game_handler.py  test_validation.py  test_ws_authenticate_reconnect.py  test_ws_game_action_handler.py  test_ws_game_state_handler.py  test_ws_start_game_handler_flow.py
(+27 files in other folders)
